--- a/views/finance/index.ejs
+++ b/views/finance/index.ejs
@@ -1,8 +1,6 @@
 <!-- hello, world -->
 <% layout('layouts/layout') %>
 
-
-
 <table class="table tablestriped">
     <thead>
         <tr>
@@ -16,59 +14,29 @@
     </thead>
 
     <tbody>
-        <% for (row in portfolio) { %> 
-        <!-- {% for row in user_portfolio %} -->
+        <% for (row in user_portfolio) { %> 
         <tr>
-            <td class="text-start"> <%= portfolio[row].symbol %> </td>
-            <td class="text-start"> <%= portfolio[row].name %> </td>
-            <td class="text-end"> <%= portfolio[row].shares %> </td>
-            <td class="text-end" id="row_price"> <%= portfolio[row].price %> </td>
-            <td class="text-end" id="row_total"> <%= portfolio[row].total %> </td>
-            <td hidden id="outflow_balance"> <%= portfolio[row].outflow_balance %> </td>
-            <!-- <td class="text-start"> {{ row["symbol"] }} </td>
-            <td class="text-start"> {{ row["name"] }} </td>
-            <td class="text-end"> {{ row["shares"] }} </td>
-            <td class="text-end" id="row_price"> {{ row["price"] | usd }} </td>
-            <td class="text-end" id="row_total"> {{ row["total"] | usd }} </td>
-            <td hidden id="outflow_balance"> {{ row["outflow_balance"] }} </td> -->
+            <td class="text-start"> <%= user_portfolio[row].symbol %> </td>
+            <td class="text-start"> <%= user_portfolio[row].name %> </td>
+            <td class="text-end"> <%= user_portfolio[row].shares %> </td>
+            <% if (user_portfolio[row].performance) {%> 
+            <td class="text-end" id="row_price" style="color:blue"><%= user_portfolio[row].price %> </td>
+            <%} else {%> 
+            <td class="text-end" id="row_price" style="color:red"><%= user_portfolio[row].price %> </td>
+            <% } %> 
+            <td class="text-end" id="row_total"> <%= user_portfolio[row].total %> </td>
         </tr>
         <% } %> 
-        <!-- {% endfor %} -->
     </tbody>
 
     <tfoot>
         <tr>
             <td class="border-0 fw-bold text-end" colspan="4">Cash</td>
             <td class="border-0 text-end"><%= cash %></td>
-            <!-- <td class="border-0 text-end">{{ cash | usd }}</td> -->
-            <td hidden class="border-0 text-end"></td>
         </tr>
         <tr>
             <td class="border-0 fw-bold text-end"  colspan="4">TOTAL</td>
-            <td class="border-0 w-bold text-end"><%= grandtotal %></td>
-            <!-- <td class="border-0 w-bold text-end">{{ grand_total | usd }}</td> -->
-            <td hidden class="border-0 w-bold text-end"></td>
+            <td class="border-0 w-bold text-end"><%= grand_total %></td>
         </tr>
     </tfoot>
 </table>
-
-<script>
-
-    // ¡Asu! He usado un montón de métodos para poder hacer matemáticas con esos números
-    // parseFloat para convertirlos en números con decimales, pq eran strings
-    // .slice para quitarle el símbolo de $ a row_total
-    // .replace para quitarle la coma a row_total
-    // .toFixed para limitar outflow_balance a dos dígitos decimales (algunos tienen hartos!!)
-
-    let row_total = document.querySelectorAll("#row_total")
-    let outflow_balance = document.querySelectorAll("#outflow_balance")
-    let row_price = document.querySelectorAll("#row_price")
-    for (let i = 0; i < row_total.length; i++) {
-        if (parseFloat(row_total[i].innerText.slice(1).replace(/,/g, '')) >= parseFloat(outflow_balance[i].innerText).toFixed(2)) {
-            row_price[i].style.color = "blue";
-        } else {
-            row_price[i].style.color = "red";
-        }
-    }
-</script>
-
