Session, Create User, Login, Logout!!

--- a/views/finance/changePassword.ejs
+++ b/views/finance/changePassword.ejs
@@ -1,14 +1,14 @@
 <% layout('layouts/layout') %>
 <!-- <h1>CHANGE PASSWORD</h1> -->
-<form action="/changePassword" method="post">
+<form action="/finance/changePassword?_method=PUT" method="POST">
     <div class="mb-3">
-        <input autofocus class="form-control mx-auto w-auto" name="current_password" placeholder="Current Password" type="password">
+        <input autofocus class="form-control mx-auto w-auto" name="oldPassword" placeholder="Current Password" type="password">
     </div>
     <div class="mb-3">
-        <input class="form-control mx-auto w-auto" name="new_password" placeholder="New Password" type="password">
+        <input class="form-control mx-auto w-auto" name="newPassword" placeholder="New Password" type="password">
     </div>
     <div class="mb-3">
-        <input class="form-control mx-auto w-auto" name="new_password_confirmation" placeholder="New Password (Again)" type="password">
+        <input class="form-control mx-auto w-auto" name="newPasswordConfirmation" placeholder="New Password (Again)" type="password">
     </div>
     <button class="btn btn-primary" type="submit">Change Password</button>
 </form>
