--- a/views/finance/login.ejs
+++ b/views/finance/login.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/layout') %>
 <!-- <h1>LOGIN</h1> -->
 
-<form action="/login" method="post">
+<form action="/finance/login" method="post">
     <div class="mb-3">
         <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
     </div>
