--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,9 +5,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar">
-            <% if (true) { %> 
-            <%# if (session["user_id"]) { %> 
-            <!-- {% if session["user_id"] %} -->
+            <% if (user) { %> 
                 <ul class="navbar-nav me-auto mt-2">
                     <li class="nav-item"><a class="nav-link" href="/finance/quote">Quote</a></li>
                     <li class="nav-item"><a class="nav-link" href="/finance/buy">Buy</a></li>
