--- a/views/finance/sell.ejs
+++ b/views/finance/sell.ejs
@@ -7,7 +7,7 @@
     <div class="mb-3">
         <select class="form-select mx-auto w-auto" name="symbol">
             <option disabled selected>Symbol</option>
-            <% for (symbol of user_data) {%> 
+            <% for (symbol of symbols) {%> 
             <option value="<%= symbol %>"><%= symbol %></option>
             <% } %> 
         </select>
