--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -24,13 +24,7 @@
 
         <%- include('../partials/navbar') %> 
 
-        <!-- {% if get_flashed_messages() %} -->
-            <!-- <header> -->
-                <!-- <div class="alert alert-primary mb-0 text-center" role="alert"> -->
-                    <!-- {{ get_flashed_messages() | join(" ") }} -->
-                <!-- </div> -->
-            <!-- </header> -->
-        <!-- {% endif %} -->
+        <%- include('../partials/flash') %> 
 
         <main class="container py-5 text-center">
             <%- body %> 
