--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,15 +1,16 @@
-<%  if (success.length > 0) { %>
-    <header>
-        <div class="alert alert-primary mb-0 text-center" role="alert">
-            <%= success %>
-        </div>
-    </header>
-    <% } %> 
 
-    <%  if (failure.length > 0) { %>
-    <header>
-        <div class="alert alert-warning mb-0 text-center" role="alert">
-            <%= failure %>
-        </div>
-    </header>
-    <% } %> 
+<%  if (success.length) { %>
+    <div class="alert alert-success alert-dismissible fade show text-center mb-0" role="alert">
+        <%= success %>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+        </button>
+    </div>
+<% } %> 
+
+<%  if (failure.length) { %>
+    <div class="alert alert-warning alert-dismissible fade show text-center mb-0" role="alert">
+        <%= failure %>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+        </button>
+    </div>
+<% } %>
